# rqm-compiler

./: AGENTS.md  README.md  RQM_TECHNICAL_CANON_V2.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: EXP012_SU4Q_BOUNDARY.md
src/rqm_compiler/: __init__.py  circuit.py  compile.py  depth.py  descriptors.py  normalize.py  ops.py  report.py  su4_blocks.py  validate.py  verification.py
src/rqm_compiler/io/: __init__.py  from_dict.py  to_dict.py
src/rqm_compiler/passes/: __init__.py  basis.py  cancel_2q.py  canonicalize.py  flatten.py  lower_u1q_named_1q.py  merge_u1q.py  sign_canon.py  to_u1q.py
tests/: test_api_discipline.py  test_circuit.py  test_conventions.py  test_descriptors.py  test_normalize.py  test_optimize.py  test_passes.py  test_roundtrip.py  test_su4_blocks.py  test_validation.py  test_verification.py
