[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
tag_regex = "v(?P<version>\d+\.\d+\.\d+)"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"