[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rqm-compiler"
dynamic = ["version"]
description = "Quaternionic quantum compiler for the RQM ecosystem"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "RQM Technologies" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Mathematics"
]

[project.urls]
Homepage = "https://github.com/RQM-Technologies-dev/rqm-compiler"
Repository = "https://github.com/RQM-Technologies-dev/rqm-compiler"
Issues = "https://github.com/RQM-Technologies-dev/rqm-compiler/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
